# cpp-seminar

./: .gitignore  CMakeLists.txt  README.md
geometry/: CMakeLists.txt
geometry/include/: Polygon.h
geometry/src/: Polygon.cpp
poly2/: CMakeLists.txt  main.cpp
pygeometry/: CMakeLists.txt  pygeometry.cpp
src/: Polygon.cpp  Polygon.h  main.cpp
